...
                android:letterSpacing="0.02"
                android:textColor="@color/textBlack"
                android:text="@string/signUpPageTitle"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:id="@+id/signUpSignUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:textSize="18sp"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/firstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpFirstNameField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/lastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpLastNameField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpUsernameField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmailField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />
...
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true"
                android:gravity="center_vertical"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPasswordField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />
...
