...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPocketbookLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailField"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:layout_gravity="center"
            android:layout_marginStart="0dp" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordField"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_marginStart="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginLoginBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_round_btn_accent"
...
            android:text="@string/new_to_pocketbook"
            android:textColor="@color/colorUnselected"
            android:textSize="14sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/loginSignUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@null"
            android:maxLines="1"
            android:letterSpacing="0.02"
...
