...
                android:letterSpacing="0.02"
                android:textColor="@color/textBlack"
                android:text="@string/addBookPageTitle"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:id="@+id/addBookSaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:textSize="18sp"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBookTitleField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:hint="@string/author">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBookAuthorField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:hint="@string/isbn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBookISBNField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:digits="0123456789xX"
                    android:inputType="text"
                    android:layout_gravity="center"
...
