...
    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/bottom_nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_book" />

    <item
        android:id="@+id/bottom_nav_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/scan" />

    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>
